--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     <section id="details" class="hstack justify-content-center">
 
-        <div class="container text-center">
+        <div class="container text-center p-5">
             <div class="row">
                 <div class="col-md-3">
                     <div class="num">
